<resources>
    <string name="app_name">Task: CE-1257218</string>
    <string name="text1">Municipal economy</string>
    <string name="text2">In work</string>
    <string name="date">January 27, 2016</string>
    <string name="text3">Created</string>
    <string name="text4">Registered</string>
    <string name="text5">Run to</string>
    <string name="text6">Responsible</string>
    <string name="text7">Dnipropetrovsk MVK</string>
    <string name="text8">For a long time, not with my memory, probably, also our parents and grandfathers were not in the world, lived a poor man with a woman, and they had one single son, and that one is not the same as it is necessary: ​​such a lazy that the one who is the Lord!</string>
</resources>
